@@ -85,7 +85,7 @@ public class QueueingCalculatorInputPanel {
 	/** Vorgabewert für das Eingabefeld */
 	private double defaulValue;
 	/** Mögliche Varianten für den Wert (z.B. Zeit und Rate) */
-	private List<Record> records;
+	private final List<Record> records;
 
 	/** Titel des Eingabeelements */
 	private final String title;
@@ -214,7 +214,7 @@ public class QueueingCalculatorInputPanel {
 		}
 		line.add(field=new JTextField(value,15));
 		final String infoText=records.get(lastFieldType).info;
-		line.add(info=new JLabel((infoText!=null && !infoText.trim().isEmpty())?"<html><body>("+infoText+")</body></html>":""));
+		line.add(info=new JLabel((infoText!=null && !infoText.isBlank())?"<html><body>("+infoText+")</body></html>":""));
 
 		field.addActionListener(e->changeListener.run());
 		field.addKeyListener(new KeyAdapter() {
@@ -257,7 +257,7 @@ public class QueueingCalculatorInputPanel {
 				}
 			}
 			final Record record=records.get(newFieldType);
-			if (record.info==null || record.info.trim().isEmpty()) {
+			if (record.info==null || record.info.isBlank()) {
 				info.setText("");
 			} else {
 				info.setText("<html><body>("+record.info+")</body></html>");
