@@ -302,7 +302,7 @@ public class StatisticViewerConnectedTable extends StatisticViewerTable {
 			dataType=Mode.DATA_TYPE_AGENTS_SKILL_LEVEL; tempCol.addAll(getColParts(Language.tr("SimStatistic.Agents.PerSkillLevel")));
 			dataType=Mode.DATA_TYPE_WORKLOAD_CALLCENTER; tempCol.addAll(getColParts(Language.tr("SimStatistic.WorkLoad.PerCallcenter")));
 			dataType=Mode.DATA_TYPE_WORKLOAD_SKILL_LEVEL; tempCol.addAll(getColParts(Language.tr("SimStatistic.WorkLoad.PerSkillLevel")));
-			cols=tempCol.toArray(new String[0]);
+			cols=tempCol.toArray(String[]::new);
 			dataType=Mode.DATA_TYPE_SUMMARY;
 			break;
 		case DATA_TYPE_SIM_AGENTS:
@@ -518,7 +518,7 @@ public class StatisticViewerConnectedTable extends StatisticViewerTable {
 	private String getDayName(int index) {
 		if (index>=0 && index<results.length) {
 			String date=results[index].editModel.date;
-			if (date!=null && !date.trim().isEmpty()) return CallcenterModel.dateToLocalString(CallcenterModel.stringToDate(date));
+			if (date!=null && !date.isBlank()) return CallcenterModel.dateToLocalString(CallcenterModel.stringToDate(date));
 		}
 
 		return ""+(index+1);
